--- a/club-manager/package.json
+++ b/club-manager/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@angular/animations": "~11.2.12",
     "@angular/cdk": "^11.2.11",
+    "@angular/cli": "^13.2.3",
     "@angular/common": "~11.2.12",
     "@angular/compiler": "~11.2.12",
     "@angular/core": "~11.2.12",
