--- a/club-manager/.vscode/launch.json
+++ b/club-manager/.vscode/launch.json
@@ -4,13 +4,36 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
       {
         "name": "Launch Chrome",
         "request": "launch",
         "type": "pwa-chrome",
-        "preLaunchTask": "npm: start",
         "url": "http://localhost:5000",
         "webRoot": "${workspaceFolder}"
+      },
+      {
+        "name": "Attach Chrome",
+        "type": "pwa-chrome",
+        "request": "attach",
+        "url": "http://localhost:5000",
+        "webRoot": "${workspaceRoot}"
+      },
+      {
+        "type": "pwa-msedge",
+        "request": "launch",
+        "name": "Launch Edge against localhost",
+        "url": "http://localhost:5000",
+        "webRoot": "${workspaceFolder}"
+      },
+      {
+        "type": "node",
+        "request": "launch",
+        "name": "Launch Program",
+        "program": "${workspaceFolder}/main.ts",
+        //"preLaunchTask": "tsc: build - tsconfig.json",
+        "preLaunchTask": "ng serve",
+        "outFiles": ["${workspaceFolder}/dist/*.js"]
       }
     ]
 }
