--- a/club-manager/tsconfig.app.json
+++ b/club-manager/tsconfig.app.json
@@ -2,7 +2,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/app",
+    "outDir": "./dist",
+    "sourceMap": true,
     "types": []
   },
   "files": [
