Filterung,http für Produktion

--- a/club-manager/angular.json
+++ b/club-manager/angular.json
@@ -25,7 +25,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "sourceMap": true,
+            "sourceMap": false,
             "aot": true,
             "assets": [
               "src/favicon.ico",
@@ -55,8 +55,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "1mb",
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
