--- a/club-manager/angular.json
+++ b/club-manager/angular.json
@@ -25,7 +25,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "sourceMap": false,
+            "sourceMap": true,
             "aot": true,
             "assets": [
               "src/favicon.ico",
