--- a/club-manager/angular.json
+++ b/club-manager/angular.json
@@ -27,6 +27,7 @@
             "tsConfig": "tsconfig.app.json",
             "sourceMap": true,
             "aot": true,
+            "optimization": false,
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -47,7 +48,7 @@
               ],
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": true,
+              "sourceMap": false,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
@@ -72,7 +73,7 @@
                   "with": "src/environments/environment.test.ts"
                 }
               ],
-              "optimization": true,
+              "optimization": false,
               "outputHashing": "all",
               "sourceMap": true,
               "namedChunks": false,
@@ -158,6 +159,5 @@
         }
       }
     }
-  },
-  "defaultProject": "club-manager"
+  }
 }
