--- a/club-manager/package.json
+++ b/club-manager/package.json
@@ -1,6 +1,6 @@
 {
   "name": "club-manager",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,38 +11,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.2",
-    "@angular/cdk": "^13.2.2",
-    "@angular/cli": "^13.2.3",
-    "@angular/common": "~13.2.2",
-    "@angular/compiler": "~13.2.2",
-    "@angular/core": "~13.2.2",
-    "@angular/forms": "~13.2.2",
-    "@angular/material": "^13.2.2",
-    "@angular/platform-browser": "~13.2.2",
-    "@angular/platform-browser-dynamic": "~13.2.2",
-    "@angular/router": "~13.2.2",
-    "angular-split": "^13.1.0",
-    "rxjs": "~7.5.4",
-    "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "~16.1.6",
+    "@angular/cdk": "^16.1.5",
+    "@angular/cli": "^16.1.5",
+    "@angular/common": "~16.1.6",
+    "@angular/compiler": "~16.1.6",
+    "@angular/core": "~16.1.6",
+    "@angular/forms": "~16.1.6",
+    "@angular/material": "^16.1.5",
+    "@angular/platform-browser": "~16.1.6",
+    "@angular/platform-browser-dynamic": "~16.1.6",
+    "@angular/router": "~16.1.6",
+    "angular-split": "^15.0.0",
+    "node-sass": "^9.0.0",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.6.1",
+    "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.3",
-    "@angular/compiler-cli": "~13.2.2",
-    "@types/jasmine": "~3.10.3",
-    "@types/node": "^17.0.17",
+    "@angular-devkit/build-angular": "~16.1.5",
+    "@angular/compiler-cli": "~16.1.6",
+    "@types/jasmine": "~4.3.5",
+    "@types/node": "^20.4.4",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "~4.0.0",
+    "jasmine-core": "~5.1.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "~7.0.0",
-    "ts-node": "~10.5.0",
+    "ts-node": "~10.9.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.5.5"
+    "typescript": "~5.1.6"
   }
 }
